manifests-testing/discourse/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: discourse-main
  namespace: discourse
  labels:
    app: discourse
    component: main
spec:
  replicas: 1
  template:
    metadata:
      name: discourse-main
      labels:
        app: discourse
        component: main
      annotations:
        scheduler.alpha.kubernetes.io/affinity: >
          {
            "nodeAffinity": {
              "requiredDuringSchedulingIgnoredDuringExecution": {
                "nodeSelectorTerms": [
                  {
                    "matchExpressions": [
                      {
                        "key": "affinity/discourse",
                        "operator": "In",
                        "values": ["true"]
                      }
                    ]
                  }
                ]
              }
            }
          }
    spec:
      containers:
      - name: server
        image: dockermuenster/discourse:1.7.0.beta9
        ports:
        - name: web
          containerPort: 3000
        volumeMounts:
        - name: assets
          mountPath: /usr/src/app/public/assets
        - name: uploads
          mountPath: /usr/src/app/public/uploads
        - name: backups
          mountPath: /usr/src/app/public/backups
      volumes:
      - name: assets
        hostPath:
          path: /srv/discourse-assets
      - name: uploads
        hostPath:
          path: /srv/discourse-uploads
      - name: backups
        hostPath:
          path: /srv/discourse-backups
