manifests-testing/discourse/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: discourse
  namespace: discourse
  labels:
    app: discourse
    component: server
  annotations:
    # ingress.kubernetes.io/auth-secret: discourse-basic-auth
    # ingress.kubernetes.io/auth-type: basic
    # ingress.kubernetes.io/auth-realm: "thisone"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: discourse.thisone.rocks
    http:
      paths:
      - backend:
          serviceName: discourse
          servicePort: 3000
        path: /
  tls:
  - secretName: discourse-tls
    hosts:
    - discourse.thisone.rocks
